--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@youwol/grapes-youwol-doc",
     "description": "Plugins to write documentation for YouWol with the @youwol/stories application.",
-    "version": "0.1.0-wip",
+    "version": "0.1.1",
     "author": "greinisch@youwol.com",
     "homepage": "https://github.com/youwol/grapes-youwol-doc#README.md",
     "main": "dist/@youwol/grapes-youwol-doc.js",
